--- a/vertical/style/vertical.css
+++ b/vertical/style/vertical.css
@@ -1,15 +1,20 @@
 main, div, p {
-  -ms-writing-mode: tb-rl; }
+  -ms-writing-mode: tb-rl;
+  /* for IE */ }
 
 html {
-  height: -moz-calc(100%); }
+  height: -moz-calc(100%);
+  /* for firefox */ }
 
 body {
   -webkit-writing-mode: vertical-rl;
+  /* for safari */
   writing-mode: vertical-rl;
   margin: 0;
   width: -moz-calc(100vw);
-  height: -moz-calc(100%); }
+  /*  for firefox */
+  height: -moz-calc(100%);
+  /* for firefox */ }
 
 .runninghead-left,
 .runninghead-right {
@@ -18,6 +23,7 @@ body {
   font-weight: normal;
   position: fixed;
   -webkit-writing-mode: horizontal-tb;
+  /* for safari */
   writing-mode: horizontal-tb; }
 
 .runninghead-left {
@@ -49,6 +55,9 @@ main {
 @font-face {
   font-family: 'Yu Gothic Custom';
   src: local("Trebuchet MS"), local("Yu Gothic"), local("YuGothic"); }
+@font-face {
+  font-family: 'Vertical Mono';
+  src: local("Consolas"), local("Courier New"); }
 p {
   font-family: 'Yu Mincho Custom', serif;
   font-size: 1em;
@@ -124,7 +133,8 @@ img {
 pre + * {
   margin-right: 1.5em; }
 pre > code {
-  font-family: monospace;
+  font-family: 'Vertical Mono', monospace;
+  /* for sfarii */
   display: block;
   font-size: 0.9em;
   line-height: 1.67em;
