--- a/vertical/style/vertical.css
+++ b/vertical/style/vertical.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 main, div, p {
   -ms-writing-mode: tb-rl;
   /* for IE. */ }
@@ -10,10 +11,10 @@ body {
   -webkit-writing-mode: vertical-rl;
   /* for safari. */
   -webkit-text-size-adjust: 100%;
-  /* for code font size in ios safari. */
+  /* for code font size in ios(iphone) safari. */
   writing-mode: vertical-rl;
   margin: 0;
-  width: 100vw;
+  width: 100%;
   /*  for firefox. */
   height: 100%;
   /* for firefox, safari. */ }
@@ -25,8 +26,12 @@ body {
   font-weight: normal;
   position: fixed;
   -webkit-writing-mode: horizontal-tb;
-  /* for safari */
+  /* Bug ios(iphone) */
   writing-mode: horizontal-tb; }
+
+div.runninghead-right h1 span {
+  -ms-writing-mode: tb-rl !important;
+  /* for IE. */ }
 
 .runninghead-left {
   top: 0;
@@ -49,11 +54,8 @@ main {
   background-size: cover; }
 
 .page {
-  height: 32em; }
+  max-height: 32em; }
 
-@media screen and (max-height: 32em) {
-  .page {
-    height: auto; } }
 @font-face {
   font-family: 'Yu Mincho Custom';
   src: local("Times New Roman"), local("Yu Mincho"), local("YuMincho"); }
@@ -62,18 +64,24 @@ main {
   src: local("Trebuchet MS"), local("Yu Gothic"), local("YuGothic"); }
 @font-face {
   font-family: 'Vertical Mono';
-  src: local("Consolas"), local("Courier New"); }
+  src: local("Consolas"), local("Courier New");
+  /* for safari. */ }
 p {
   font-family: 'Yu Mincho Custom', serif;
   font-size: 1em;
-  font-feature-settings: 'halt', 'vhal';
+  /* font-feature-settings: 'halt', 'vhal'; */
   line-height: 1.8;
-  text-align: justify;
-  text-justify: inter-ideograph;
-  overflow-wrap: break-word;
-  hanging-punctuation: force-end;
   text-indent: 1em;
-  margin: 0; }
+  margin: 0;
+  text-align: justify; }
+
+p, figcaption {
+  line-break: strict;
+  word-break: break-all;
+  /* 英単語が長い場合の対応のために。 */
+  text-justify: inter-character;
+  overflow-wrap: break-word;
+  hanging-punctuation: force-end; }
 
 .tcy {
   -ms-text-combine-horizontal: digits 2;
@@ -83,10 +91,23 @@ p {
 .emphasis {
   font-style: normal;
   -webkit-text-emphasis: filled;
-  text-emphasis: filled; }
+  /* for chrome. */
+  text-emphasis: filled;
+  text-emphasis-position: over; }
+
+a {
+  text-underline-position: under right;
+  text-decoration-skip: ink; }
+
+.sideways {
+  text-orientation: sideways;
+  /* リンクでの適用がFirefoxでは下線がでなくなってしまうので、具体的な文字列に対して指定することに。 */ }
+
+.url {
+  word-break: break-all; }
 
 h1, h2, h3, h4, h6, li, dt, dd, figcaption {
-  font-family: 'Yu Gothic Custom', sans-serif;
+  font-family: 'Yu Gothic Custom', 'Yu Gothic', 'YuGothic', sans-serif;
   line-height: 1.5; }
 
 .ch2 {
@@ -122,15 +143,13 @@ h1, h2, h3, h4, h6, li, dt, dd, figcaption {
   border-top: 0.5em solid #666;
   padding: 0.5em 0.3em 0; }
 
-.url {
-  word-break: break-all; }
-
 img {
   max-width: 100vw;
   max-height: 100%; }
 
 .bfl, pre {
-  margin: 0 1.5em 0 0; }
+  margin: 0 1.5em 0 0;
+  max-height: 100%; }
 
 .bfl + * {
   margin-right: 1.5em; }
@@ -152,9 +171,6 @@ pre > code {
   white-space: pre-wrap;
   /* for firefox, and line start prohibition of '"' in chrome */
   word-break: break-all; }
-
-.image {
-  max-height: 100%; }
 
 .img-wrap img {
   display: block; }
@@ -182,8 +198,9 @@ figcaption {
   max-height: 75%; }
 
 @media screen and (min-height: 32em) {
-  .image-sdl, .tandem-sdl {
+  .image-sdl {
     -webkit-writing-mode: horizontal-tb;
+    /* for safari. */
     writing-mode: horizontal-tb;
     display: table;
     border-collapse: collapse; }
@@ -216,21 +233,28 @@ figcaption {
   border-collapse: collapse; }
 
 .tandem-images {
+  -webkit-writing-mode: horizontal-tb;
+  /* for safari */
+  writing-mode: horizontal-tb;
   margin-top: -1em; }
 
 .tandem-image {
+  display: table-row; }
+
+.tandem .img-wrap {
   display: table-cell;
-  max-height: calc(50% - 1em);
   padding-top: 1em; }
 
 .tandem .img-wrap img {
-  max-height: 100%; }
-.tandem figcaption {
-  display: table-caption;
-  caption-side: bottom; }
+  max-height: calc(50% - 1em);
+  max-height: -moz-calc(50vh - 7em - 2em); }
 
 @media screen and (min-height: 32em) {
   .tandem-sdl {
+    -webkit-writing-mode: horizontal-tb;
+    writing-mode: horizontal-tb;
+    display: table;
+    border-collapse: collapse;
     margin-top: -1em; }
     .tandem-sdl .tandem-images {
       display: table-cell;
@@ -244,82 +268,88 @@ figcaption {
       height: min-content; }
       .tandem-sdl .img-wrap img {
         max-height: calc(37.5% - 1em);
-        max-height: -moz-calc(42.5vh - 6em - 0.5em); } }
-.sidebyside-images {
+        max-height: -moz-calc(42.5vh - 6em - 0.5em); }
+    .tandem-sdl figcaption {
+      display: table-caption;
+      caption-side: bottom; } }
+.sidebyside-images,
+.sidebyside-rtl-images {
   -webkit-writing-mode: horizontal-tb;
   writing-mode: horizontal-tb;
   display: table;
-  max-width: 100vw;
   max-height: 100%;
   border-collapse: collapse; }
 
-.sidebyside-image {
-  display: table-cell;
-  max-height: calc(50% - 1em); }
-  .sidebyside-image:last-child {
+.sidebyside-image,
+.sidebyside-rtl-image {
+  display: table-cell; }
+  .sidebyside-image:last-child,
+  .sidebyside-rtl-image:last-child {
     padding-left: 1em; }
 
-.sidebyside .img-wrap img {
-  max-width: calc(50vw - 1em);
-  max-height: 100%; }
+.sidebyside .img-wrap img,
+.sidebyside-rtl .img-wrap img {
+  max-width: calc(50vw - 1em); }
+
+.sidebyside.sidebyside-with-fc .img-wrap img,
+.sidebyside-sdl.sidebyside-with-fc .img-wrap img,
+.sidebyside-rtl.sidebyside-with-fc .img-wrap img,
+.sidebyside-rtl-sdl.sidebyside-with-fc .img-wrap img {
+  max-width: calc(37.5vw - 1em); }
 
 @media screen and (min-height: 32em) {
-  .sidebyside-sdl {
+  .sidebyside-sdl,
+  .sidebyside-rtl-sdl {
     -webkit-writing-mode: horizontal-tb;
     writing-mode: horizontal-tb;
     display: table;
-    max-width: 100vw;
-    max-height: 100%;
     border-collapse: collapse; }
-    .sidebyside-sdl sidebyside-images {
-      display: table-row; }
-    .sidebyside-sdl .sidebyside-image {
-      display: table-cell;
-      max-height: calc(50% - 1em); }
-    .sidebyside-sdl figcaption {
+    .sidebyside-sdl .sidebyside-image,
+    .sidebyside-sdl .sidebyside-rtl-images,
+    .sidebyside-rtl-sdl .sidebyside-image,
+    .sidebyside-rtl-sdl .sidebyside-rtl-images {
+      display: table-cell; }
+    .sidebyside-sdl.sidebyside-with-fc .img-wrap img,
+    .sidebyside-rtl-sdl.sidebyside-with-fc .img-wrap img {
+      max-width: calc(50vw - 1em); }
+    .sidebyside-sdl figcaption,
+    .sidebyside-rtl-sdl figcaption {
       display: table-caption;
       caption-side: bottom;
       margin: 0.25em 0 0; } }
-.sidebyside-rtl {
-  direction: rtl;
-  -webkit-writing-mode: horizontal-tb;
-  writing-mode: horizontal-tb;
-  display: table;
-  max-width: 100vw;
-  max-height: 100%;
-  border-collapse: collapse; }
+.sidebyside-rtl-images {
+  direction: rtl; }
 
-.sidebyside-rtl-image {
-  display: table-cell;
-  max-height: calc(50% - 1em); }
-  .sidebyside-rtl-image:last-child {
-    padding-right: 1em; }
+.sidebyside-rtl-image:last-child {
+  padding: 0 1em 0 0; }
 
-.sidebyside-rtl .img-wrap {
-  direction: ltr; }
-  .sidebyside-rtl .img-wrap img {
-    max-width: calc(50vw - 1em);
-    max-height: 100%; }
+.sidebyside-rtl .img-wrap,
 .sidebyside-rtl figcaption {
-  direction: ltr;
-  display: table-caption;
-  caption-side: bottom; }
+  direction: ltr; }
 
-main h1 {
+.chh1 {
   margin: 0; }
-  main h1 + * {
+  .chh1 + * {
     margin-right: 1.75em; }
 
 .warning {
   margin: 0 1em;
-  padding: 3.5em 0.5em 0.5em;
-  border: 0.1em solid #000; }
+  border: 0.1em solid #000;
+  padding: 4em 1em 1em; }
 
 .warning-title {
-  text-indent: 0;
-  margin: -3.5em 0 0.5em; }
+  margin: -4em 0 0.95em; }
 
 .warning .joint {
   display: none; }
+
+@media screen and (-webkit-max-device-pixel-ratio: 1.5) and (max-resolution: 1.5dppx) {
+  figure {
+    background: #ECA; }
+
+  .zoom img {
+    zoom: 0.5;
+    -moz-transform: salce(0.5);
+    -moz-transform-box: fill-box; } }
 
 /*# sourceMappingURL=vertical.css.map */
