--- a/vertical/style/vertical.css
+++ b/vertical/style/vertical.css
@@ -15,7 +15,7 @@
   unicode-range: U+0-2FF; }
 @font-face {
   font-family: 'Vertical Mono';
-  src: local("Consolas"), local("Menlo"), local("Courier New");
+  src: local("Consolas"), local("Menlo");
   /* for safari. */ }
 html {
   height: 100%;
@@ -24,16 +24,16 @@ html {
 body {
   -webkit-writing-mode: vertical-rl;
   /* for safari. */
-  -webkit-text-size-adjust: 100%;
-  /* for code font size in ios(iphone) safari. */
   writing-mode: vertical-rl;
-  margin: 0;
   width: -moz-calc(100vw);
   /*  for firefox. */
   height: 100%;
   /* for firefox, safari. */
   overflow-y: hidden;
-  /* for firefox. */ }
+  /* for firefox. */
+  overflow: auto !important;
+  /* for edge. But specified overflow-y is canceled. */
+  margin: 0; }
 
 main, div, p {
   -ms-writing-mode: tb-rl;
@@ -100,10 +100,15 @@ figcaption {
   word-break: break-all;
   /* 英単語が長い場合の対応のために。 */ }
 
-code, samp {
-  -moz-font-feature-settings: 'hwid', 'zero';
-  -webkit-font-feature-settings: 'hwid', 'zero';
-  font-feature-settings: 'hwid', 'zero'; }
+code, samp, var {
+  font-family: 'Vertical Mono', monospace;
+  /* for sfarii */
+  -webkit-text-size-adjust: 100%;
+  /* for code font size in ios(iphone) safari. */ }
+
+p > code, p > samp, p > var {
+  font-size: 0.9em;
+  margin: 0.063em 0; }
 
 .tcy,
 .fc-ordinal {
@@ -131,6 +136,7 @@ code, samp {
     text-orientation: upright; } }
 .sideways {
   /* リンクでの適用がFirefoxでは下線がでなくなってしまうので、具体的な文字列に対して指定することに。 */
+  -ms-text-orientation: sideways;
   text-orientation: sideways; }
 
 .emphasis {
@@ -157,6 +163,25 @@ rtc {
   rtc::after {
     display: inline;
     content: '\FE36'; } }
+.inline-ruby {
+  display: inline;
+  font-size: inherit;
+  white-space: inherit;
+  text-emphasis: inherit;
+  font-variant-east-asian: inherit;
+  -moz-font-feature-settings: inherit;
+  -webkit-font-feature-settings: inherit;
+  font-feature-settings: inherit; }
+  .inline-ruby rt, .inline-ruby rp, .inline-ruby rtc {
+    display: inline;
+    font-size: inherit;
+    white-space: inherit;
+    text-emphasis: inherit;
+    font-variant-east-asian: inherit;
+    -moz-font-feature-settings: inherit;
+    -webkit-font-feature-settings: inherit;
+    font-feature-settings: inherit; }
+
 a {
   text-underline-position: under right;
   text-decoration-skip: ink;
@@ -213,8 +238,6 @@ img {
 pre + * {
   margin-right: 1.5em; }
 pre > code {
-  font-family: 'Vertical Mono', monospace;
-  /* for sfarii */
   display: block;
   font-size: 0.9em;
   line-height: 1.67em;
@@ -300,7 +323,7 @@ pre > code {
     max-height: calc(50% - 0.5em);
     max-height: -moz-calc(50vh - 3.5em - 0.5em); }
 
-@media screen and (min-height: 32em) {
+@media screen and (max-height: 32em) {
   .tandem-sdl {
     -webkit-writing-mode: horizontal-tb;
     writing-mode: horizontal-tb;
