--- a/vertical/style/vertical.css
+++ b/vertical/style/vertical.css
@@ -512,22 +512,31 @@ th, td {
     caption-side: top;
     margin: 0 0 0 0.4em; }
   .table table {
-    border-right: #000 solid 0.125em;
-    border-left: #000 solid 0.0625em; }
+    border-right: #444 solid 0.125em;
+    border-left: #444 solid 0.0625em; }
   .table th {
-    border-left: #000 solid calc(0.0625em / 0.875);
+    border-left: #444 solid calc(0.0625em / 0.875);
     padding: 1em 0.25em; }
+    .table th:first-child {
+      padding-top: 2em; }
+    .table th:last-child {
+      padding-bottom: 2em; }
   .table td {
     padding: 1em 0.25em; }
+    .table td:first-child {
+      padding-top: 2em; }
+    .table td:last-child {
+      padding-bottom: 2em; }
 
 .table-horizontal {
+  -webkit-writing-mode: horizontal-tb;
   writing-mode: horizontal-tb;
   margin-top: auto;
   margin-bottom: auto;
   display: table; }
   .table-horizontal table {
-    border-top: #000 solid 0.125em;
-    border-bottom: #000 solid 0.0625em; }
+    border-top: #444 solid 0.125em;
+    border-bottom: #444 solid 0.0625em; }
   .table-horizontal th, .table-horizontal td {
     font-variant-east-asian: proportional-width;
     -moz-font-feature-settings: 'pwid';
@@ -535,12 +544,22 @@ th, td {
     font-feature-settings: 'pwid'; }
   .table-horizontal th {
     padding: 0.25em 1em;
-    border-bottom: #000 solid calc(0.0625em / 0.875); }
+    border-bottom: #444 solid calc(0.0625em / 0.875); }
+    .table-horizontal th:first-child {
+      padding-left: 2em; }
+    .table-horizontal th:last-child {
+      padding-right: 2em; }
   .table-horizontal td {
     padding: 0.25em 1em; }
+    .table-horizontal td:first-child {
+      padding-left: 2em; }
+    .table-horizontal td:last-child {
+      padding-right: 2em; }
   .table-horizontal figcaption {
     display: table-caption;
     caption-side: top;
     margin: 0 0 0.4em 0; }
+  .table-horizontal .fc-title {
+    margin: 0 0.25em 0 0; }
 
 /*# sourceMappingURL=vertical.css.map */
