--- a/vertical/style/vertical.css
+++ b/vertical/style/vertical.css
@@ -322,7 +322,7 @@ pre > code {
   .tandem .img-wrap img {
     max-width: 75vw;
     max-height: calc(50% - 0.5em);
-    max-height: -moz-calc(50vh - 3.5em - 0.5em); }
+    max-height: -moz-calc((100vh - 7em) * 0.5 - 0.5em); }
 
 @media screen and (min-height: 32em) {
   .tandem-sdl {
@@ -346,7 +346,7 @@ pre > code {
         margin: 0 auto;
         max-width: 100vw;
         max-height: calc(50% - 0.5em);
-        max-height: -moz-calc(50vh - 0.5em - 3.5em); }
+        max-height: -moz-calc((100vh - 7em) * 0.75 * 0.5 - 0.5em); }
     .tandem-sdl figcaption {
       display: table-caption;
       caption-side: bottom;
