--- a/vertical/style/vertical.scss
+++ b/vertical/style/vertical.scss
@@ -337,7 +337,7 @@ pre {
   img {
     max-width: 75vw;
     max-height: calc(50% - 0.5em);
-    max-height: -moz-calc(50vh - 3.5em - 0.5em);
+    max-height: -moz-calc((100vh - 7em) * 0.5 - 0.5em);
   }
 }
 @media screen and (min-height: $page-height) {
@@ -364,7 +364,7 @@ pre {
         margin: 0 auto;
         max-width: 100vw;
         max-height: calc(50% - 0.5em);
-        max-height: -moz-calc(50vh - 0.5em - 3.5em);
+        max-height: -moz-calc((100vh - 7em) * 0.75 * 0.5 - 0.5em);
       }
     }
     figcaption {
