--- a/vertical/style/vertical.css
+++ b/vertical/style/vertical.css
@@ -317,8 +317,7 @@ pre > code {
   display: table-cell;
   height: intrinsic;
   height: fit-content;
-  padding-top: 1em;
-  width: -moz-min-content; }
+  padding-top: 1em; }
   .tandem .img-wrap img {
     max-width: 75vw;
     max-height: calc(50% - 0.5em);
@@ -377,10 +376,8 @@ pre > code {
 .sidebyside-rtl .img-wrap img {
   max-width: calc(50vw - 1em); }
 
-.sidebyside.sidebyside-fc .img-wrap img,
-.sidebyside-sdl.sidebyside-fc .img-wrap img,
-.sidebyside-rtl.sidebyside-fc .img-wrap img,
-.sidebyside-rtl-sdl.sidebyside-fc .img-wrap img {
+.sidebyside-fc .img-wrap img,
+.sidebyside-rtl-fc .img-wrap img {
   max-width: calc(37.5vw - 1em); }
 
 @media screen and (min-height: 32em) {
@@ -397,7 +394,7 @@ pre > code {
     display: table-cell; }
 
   .sidebyside-sdl.sidebyside-fc .img-wrap img,
-  .sidebyside-rtl-sdl.sidebyside-fc .img-wrap img {
+  .sidebyside-rtl-sdl.sidebyside-rtl-fc .img-wrap img {
     max-width: calc(50vw - 1em); }
 
   .sidebyside-sdl figcaption,
