--- a/vertical/style/vertical.scss
+++ b/vertical/style/vertical.scss
@@ -382,73 +382,45 @@ pre {
   }
 }
 
-.sidebyside-images, {
-//.sidebyside-rtl-images {
+.sidebyside-images {
   -webkit-writing-mode: horizontal-tb;
   writing-mode: horizontal-tb;
   display: table;
   border-collapse: collapse;
 }
-.sidebyside-image, {
-//.sidebyside-rtl-image {
+.sidebyside-image {
   display: table-cell;
+  &:last-child {
+    padding-left: 1em;
+  }
 }
-.sidebyside-image:last-child, {
-//.sidebyside-rtl-image:last-child {
-  padding-left: 1em;
-}
-.sidebyside .img-wrap img, {
-//.sidebyside-rtl .img-wrap img {
+.sidebyside .img-wrap img {
   max-width: calc(50vw - 1em);
 }
-.sidebyside-fc .img-wrap img, {
-//.sidebyside-rtl-fc .img-wrap img {
+.sidebyside-fc .img-wrap img {
   max-width: calc(37.5vw - 1em);
 }
 @media screen and (min-height: $page-height) {
-  .sidebyside-sdl, {
-//  .sidebyside-rtl-sdl {
+  .sidebyside-sdl {
     -webkit-writing-mode: horizontal-tb;
     writing-mode: horizontal-tb;
     display: table;
     border-collapse: collapse;
-  }
-  .sidebyside-sdl {
-    .sidebyside-image, {
-//    .sidebyside-rtl-images {
+    .sidebyside-image {
       display: table-cell;
     }
-  }
-//  .sidebyside-rtl-sdl {
-//    .sidebyside-image, .sidebyside-rtl-images {
-//      display: table-cell;
-//    }
-//  }
-  .sidebyside-sdl.sidebyside-fc .img-wrap img, {
-//  .sidebyside-rtl-sdl.sidebyside-rtl-fc .img-wrap img {
+    &.sidebyside-fc .img-wrap img {
     max-width: calc(50vw - 1em);
-  }
-  .sidebyside-sdl figcaption, {
-//  .sidebyside-rtl-sdl figcaption {
-    display: table-caption;
-    caption-side: bottom;
-    margin: 0.25em 0 0;
-    font-variant-east-asian: proportional-width;
-    -moz-font-feature-settings: 'pwid';
-    -webkit-font-feature-settings: 'pwid';
-    font-feature-settings: 'pwid';
-  }
-}
-
-.sidebyside-rtl-images {
-//  direction: rtl;
-}
-.sidebyside-rtl-image:last-child {
-//  padding: 0 1em 0 0;
-}
-.sidebyside-rtl {
-  .img-wrap, figcaption {
-//    direction: ltr;
+    }
+    figcaption {
+      display: table-caption;
+      caption-side: bottom;
+      margin: 0.25em 0 0;
+      font-variant-east-asian: proportional-width;
+      -moz-font-feature-settings: 'pwid';
+      -webkit-font-feature-settings: 'pwid';
+      font-feature-settings: 'pwid';
+    }
   }
 }
 
