--- a/vertical/style/vertical.scss
+++ b/vertical/style/vertical.scss
@@ -284,7 +284,7 @@ pre {
   .image-sdl {
     -webkit-writing-mode: horizontal-tb; /* for safari. */
     writing-mode: horizontal-tb;
-    display: table;        
+    display: table;
     border-collapse: collapse;
     .img-wrap {
       display: table-cell;
@@ -294,7 +294,7 @@ pre {
       img {
         max-width: 100vw;
         max-height: 75%;
-        max-height: -moz-calc(75vh - 6em - 0.5em);       
+       max-height: -moz-calc(75vh - 6em - 0.5em);       
         margin: 0 auto; /* in case width of caption is longer than image. */
       }
     }
@@ -494,7 +494,7 @@ pre {
   padding: 1em;
 }
 
-.zoom img {
+figure.zoom img {
   -ms-zoom: 0.32;
   zoom: 0.32;
 }
